# FlashRT

./: AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  README.md  USAGE.md
benchmarks/: cosmos3_edge_thor_denoise.py  cosmos3_reasoner_thor.py
cmake/: FindJetsonPI.cmake
cpp/: CMakeLists.txt
cpp/cmake/: verify_dynamic_exports.cmake
cpp/families/vla/include/flashrt/cpp/families/vla/: runtime.h
cpp/loader/include/flashrt/cpp/loader/: safetensors.h  sha256.h
cpp/loader/src/: safetensors.cpp  sha256.cpp
cpp/modalities/include/flashrt/cpp/modalities/: action.h  text.h  tokenizer.h  types.h  vision.h
cpp/modalities/src/: action_cpu.cpp  sentencepiece_tokenizer.cpp  text_cpu.cpp  text_cuda.cu  tokenizer_unavailable.cpp  types.cpp  vision_cpu.cpp  vision_cuda.cu
cpp/models/pi05/: pi05_c_exports.map  pi05_c_exports.txt
cpp/models/pi05/include/flashrt/cpp/models/pi05/: c_api.h  export.h  io.h  model_runtime.h  runtime.h
cpp/models/pi05/internal/include/flashrt/cpp/models/pi05/model/: captured_program.h  dims.h  execution_plan.h  frontend_ops.h  linear_weight_groups.h  native_session.h  prompt_embed.h  prompt_format.h  resolved_resources.h  semantic_pipeline.h  target_bundle.h
cpp/models/pi05/internal/include/flashrt/cpp/models/pi05/support/: native_calibration.h  native_calibration_session.h  native_device_weights.h  native_float16.h  native_resource_resolver.h  native_rope.h  native_weight_materializer.h  native_weight_ops.h  native_weights.h  native_workspace.h
cpp/models/pi05/internal/include/flashrt/cpp/models/pi05/targets/sm110/: fp8_weight_packer.h  frontend_bindings.h  operation_driver.h  operations.h  physical_resources.h  target.h
cpp/models/pi05/internal/include/flashrt/cpp/models/pi05/targets/sm120/: attention.h  attention_driver.h  bf16_linear.h  bf16_operations.h  bf16_scratch.h  device_buffer.h  fp8_autotune.h  fp8_linear.h  fp8_weight_packer.h  operations.h  target.h
cpp/models/pi05/src/: c_api.cpp  config_map.h  io.cpp  model_runtime.cpp  native_calibration_c_api.cpp  native_calibration_session.cpp  native_model_runtime.cpp  native_open.cpp  native_open_internal.h  native_session_factory.cpp  native_session_factory.h  runtime.cpp  spec.cpp
cpp/models/pi05/src/model/: captured_program.cpp  dims.cpp  execution_plan.cpp  linear_weight_groups.cpp  native_session.cpp  prompt_embed.cpp  prompt_format.cpp  resolved_resources.cpp  semantic_pipeline.cpp
cpp/models/pi05/src/support/: native_calibration.cpp  native_device_weights.cpp  native_float16.cpp  native_resource_resolver.cpp  native_rope.cu  native_rope_unavailable.cpp  native_weight_materializer.cpp  native_weight_ops.cpp  native_weights.cpp  native_workspace.cpp
cpp/models/pi05/src/targets/sm110/: fp8_weight_packer.cpp  frontend_bindings.cpp  operation_driver.cu  operations.cpp  physical_resources.cpp  target.cpp
cpp/models/pi05/src/targets/sm120/: attention.cpp  attention_driver.cpp  bf16_linear.cpp  bf16_operations.cpp  bf16_scratch.cpp  fp8_autotune.cpp  fp8_linear.cpp  fp8_weight_packer.cpp  operations.cpp  target.cpp
cpp/native/include/flashrt/cpp/native/: config_object.h  cuda_graph_set.h
cpp/native/src/: config_object.cpp  cuda_graph_set.cpp
cpp/providers/llama_cpp/: provider_exports.map
cpp/providers/llama_cpp/include/flashrt/providers/llama_cpp/: c_api.h  jetson_pi_engine.h
cpp/providers/llama_cpp/src/: checkpoint_identity.cpp  checkpoint_identity.h  jetson_pi_engine.cpp  jetson_pi_link_check.cpp  llm_runtime.cpp  mllm_runtime.cpp  pi0_runtime.cpp  provider_open.cpp
cpp/tests/: check_llama_cpp_provider_exports.cmake  gate_pi05_c_api_export.py  gate_pi05_model_runtime_export.py  gate_pi05_native_schema_parity.py  llama_cpp_generic_plan.h  pi05_resolved_fixture.h  pi05_runtime_ctypes.py  test_csrc_attention_seqused.cu  test_csrc_bf16_operations.cu  test_csrc_fp8_weight_quantize.cu  test_csrc_rope_table.cu  test_device_staging.cpp  test_llama_cpp_jetson_pi_engine.cpp  test_llama_cpp_jetson_pi_link.cpp  test_llama_cpp_jetson_pi_llm.cpp  test_llama_cpp_jetson_pi_llm_parity.cpp  test_llama_cpp_jetson_pi_mllm.cpp  test_llama_cpp_jetson_pi_mllm_parity.cpp  test_llama_cpp_jetson_pi_parity.cpp  test_llama_cpp_jetson_pi_state_parity.cpp  test_llama_cpp_provider.cpp  test_modalities.cpp  test_native_config.cpp  test_native_cuda_graph_set.cpp  test_pi05_c_api.cpp  test_pi05_captured_program.cpp  test_pi05_execution_plan.cpp  test_pi05_linear_weight_groups.cpp  test_pi05_model_runtime.cpp  test_pi05_native_calibration.cpp  test_pi05_native_open.cpp  test_pi05_native_resource_resolver.cpp  test_pi05_native_session.cpp  test_pi05_prompt_embed.cpp  test_pi05_prompt_format.cpp  test_pi05_resolved_resources.cpp  test_pi05_runtime.cpp  test_pi05_semantic_pipeline.cpp  test_pi05_sm110_target_resources.cpp  test_pi05_sm120_attention.cpp  (+9 more)
cpp/tests/data/: pi05_native_v2_schema.records
cpp/tests/fixtures/: prepare_pi0_fixture.py
csrc/: bindings.cpp  fa2_bindings.cpp  fp4_bindings.cpp  qwen3_vl_bindings.cpp
docs/: benchmark_comparison.md  calibration.md  cosmos3_edge_thor.md  cpp_runtime_design.md  cpp_runtime_modalities.md  exec_contract.md  fa2_native_c_api.md  higgs_audio_v3.md  jetson_pi_usage.md  jetson_pi_validation_matrix.md  minimax_remover_usage.md  model_runtime_api.md  motus_usage_beta.md  nexn2_usage.md  phase5_pi0_stages_eval.md  phase6_backend_vtable_eval.md  phase7_llm_repeatable_decode_eval.md  phase8_zerocopy_dlpack_eval.md  pi05_native_calibration.md  pi05_native_cpp.md  pr_review_checklist.md  qwen36_nvfp4.md  qwen36_usage.md  qwen3_vl_fp8_sm89.md  qwen3_vl_fp8_sm89_2b.md  qwen3_vl_nvfp4.md  runtime_contract.md  stable_api.md  subgraph_stage_plans.md
examples/: cosmos3_edge_thor_baseline.py  higgs_audio_v3_quickstart.py  minimax_remover_quickstart.py  motus_quickstart.py  quickstart.py
exec/: CMakeLists.txt
flash_rt/: api.py
runtime/: CMakeLists.txt
scripts/: bench_gemv_sm89.py  bench_prefill_gemm.py  build_inventory.py  profile_qwen3_vl_fp8_sm89.py  smoke_qwen3_vl_fp8_sm89.py  smoke_qwen3_vl_multi_image.py  test_geglu_silu_fold_correctness.py  (+1 more)
serving/: README.md
(+163 files in other folders)
